<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="@string/hint_search"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_sort"
            app:layout_constraintTop_toBottomOf="@+id/search_view" />

        <RadioGroup
            android:id="@+id/sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/title_sort">

            <RadioButton
                android:id="@+id/sort_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_date" />

            <RadioButton
                android:id="@+id/sort_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_priority" />

            <RadioButton
                android:id="@+id/sort_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_name" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            app:layout_constraintTop_toBottomOf="@+id/sort" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>